Mobile view fix

--- a/index.html
+++ b/index.html
@@ -775,7 +775,7 @@
                                 <div class="form_row">
                                     <div class="form_item">
                                         <textarea placeholder="Message" name="Message" rows="5"
-                                            class="form_textarea form_controll"></textarea>
+                                            class="form_textarea form_controll width_at_low"></textarea>
                                     </div>
                                 </div>
                                 <div class="align_button">
