--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <h1 class="logo">Yummy<span>.</span></h1>
                 <nav>
                     <ul>
-                        <li><a href="#home">Home</a></li>
+                        <li><a href="#Home">Home</a></li>
                         <li><a href="#About">About</a></li>
                         <li><a href="#Menu">Menu</a></li>
                         <li><a href="#Events">Events</a></li>
